Added view controllers

--- a/Todo App/Base.lproj/Main.storyboard
+++ b/Todo App/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Clo-sS-Jrg">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--ToDo App-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="Todo_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,120 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wdR-wm-yZR">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="wdR-wm-yZR" secondAttribute="trailing" id="hxf-IN-zTK"/>
+                            <constraint firstItem="wdR-wm-yZR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mWx-DH-Hhw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wdR-wm-yZR" secondAttribute="bottom" id="v1q-Dc-Qso"/>
+                            <constraint firstItem="wdR-wm-yZR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="yDA-of-sCT"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="ToDo App" id="cfn-CV-8Uq">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="soX-uz-lYF"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="nX7-1m-DEg">
+                            <connections>
+                                <action selector="plusTapped:" destination="BYZ-38-t0r" id="BmU-0a-aJN"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView1" destination="wdR-wm-yZR" id="caz-ry-84N"/>
+                        <segue destination="BT5-kz-l3b" kind="show" identifier="addSegue" id="jfB-HC-WtA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1052" y="124.58770614692655"/>
+        </scene>
+        <!--Create Task View Controller-->
+        <scene sceneID="K5a-fc-Bkd">
+            <objects>
+                <viewController id="BT5-kz-l3b" customClass="CreateTaskViewController" customModule="Todo_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TLj-bl-m7Z"/>
+                        <viewControllerLayoutGuide type="bottom" id="Gbm-vT-JLX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CvX-QE-Bcj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mqa-Uf-FYX">
+                                <rect key="frame" x="162" y="79" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nuW-LS-Nn1">
+                                <rect key="frame" x="56" y="110" width="263" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzM-oI-GVZ">
+                                <rect key="frame" x="147" y="170" width="80" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="4pV-qg-hAd">
+                                <rect key="frame" x="163" y="201" width="51" height="31"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66p-tF-293">
+                                <rect key="frame" x="172" y="262" width="30" height="30"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addTaskBtn:" destination="BT5-kz-l3b" eventType="touchUpInside" id="5kh-C9-QKV"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="tzM-oI-GVZ" firstAttribute="centerX" secondItem="CvX-QE-Bcj" secondAttribute="centerX" id="0y0-Aa-frw"/>
+                            <constraint firstItem="Mqa-Uf-FYX" firstAttribute="centerX" secondItem="CvX-QE-Bcj" secondAttribute="centerX" id="8iB-el-d1m"/>
+                            <constraint firstItem="4pV-qg-hAd" firstAttribute="centerX" secondItem="CvX-QE-Bcj" secondAttribute="centerX" id="Mtq-CW-srm"/>
+                            <constraint firstItem="Mqa-Uf-FYX" firstAttribute="top" secondItem="TLj-bl-m7Z" secondAttribute="bottom" constant="15" id="WpL-4W-fss"/>
+                            <constraint firstItem="nuW-LS-Nn1" firstAttribute="top" secondItem="Mqa-Uf-FYX" secondAttribute="bottom" constant="10" id="YJr-a7-oTl"/>
+                            <constraint firstItem="4pV-qg-hAd" firstAttribute="top" secondItem="tzM-oI-GVZ" secondAttribute="bottom" constant="10" id="h9p-1Y-bS1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nuW-LS-Nn1" secondAttribute="trailing" constant="40" id="nBZ-BD-5Xa"/>
+                            <constraint firstItem="nuW-LS-Nn1" firstAttribute="top" secondItem="Mqa-Uf-FYX" secondAttribute="bottom" constant="10" id="pKb-rs-WYi"/>
+                            <constraint firstItem="66p-tF-293" firstAttribute="top" secondItem="4pV-qg-hAd" secondAttribute="bottom" constant="30" id="ppf-V9-Ybg"/>
+                            <constraint firstItem="tzM-oI-GVZ" firstAttribute="top" secondItem="nuW-LS-Nn1" secondAttribute="bottom" constant="30" id="qQp-ll-YHi"/>
+                            <constraint firstItem="66p-tF-293" firstAttribute="centerX" secondItem="CvX-QE-Bcj" secondAttribute="centerX" id="rK7-md-v0w"/>
+                            <constraint firstItem="nuW-LS-Nn1" firstAttribute="leading" secondItem="CvX-QE-Bcj" secondAttribute="leadingMargin" constant="40" id="sRo-Y8-FPh"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="taskFlagSwitch" destination="4pV-qg-hAd" id="lqq-Av-Zon"/>
+                        <outlet property="taskNameTxt" destination="nuW-LS-Nn1" id="OJF-oO-5Ak"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="axp-AY-BXM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1817" y="125"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IeP-pq-gfi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Clo-sS-Jrg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WpP-0R-Lgf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gc6-c4-H6g"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QQL-Ru-gZN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="112.8" y="124.58770614692655"/>
         </scene>
     </scenes>
 </document>
